fixes order page alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,59 +3,63 @@
  *= require_self
  */
 
- html {
-   height: 100%;
-   box-sizing: border-box;
- }
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
 
- body {
-   text-align: center;
-   position: relative;
-   margin: 0;
-   padding-bottom: 6rem;
-   min-height: 100%;
- }
+.order-table {
+    text-align: left;
+}
+
+body {
+    text-align: center;
+    position: relative;
+    margin: 0;
+    padding-bottom: 6rem;
+    min-height: 100%;
+}
 
 .search-btn:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .navbar {
-  background-color: rgb(17, 126, 221);
+    background-color: rgb(17, 126, 221);
 }
 
 .glyphicon {
-  font-family: 'Oswald', sans-serif;
-  letter-spacing: 1.5px;
-  display: inline;
-  padding: 5px;
-  color: #fff;
-  margin: 0 10px;
+    font-family: 'Oswald', sans-serif;
+    letter-spacing: 1.5px;
+    display: inline;
+    padding: 5px;
+    color: #fff;
+    margin: 0 10px;
 }
 
 .glyphicon:hover {
-  border-top: 4px solid rgb(245, 170, 95);
-  text-decoration: none;
-  color: rgb(245, 170, 95);
+    border-top: 4px solid rgb(245, 170, 95);
+    text-decoration: none;
+    color: rgb(245, 170, 95);
 }
 
 #footer {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: rgb(230, 228, 228);
-  border-top: 5px solid rgb(245, 170, 95);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgb(230, 228, 228);
+    border-top: 5px solid rgb(245, 170, 95);
 }
 
 #footer blockquote {
-  border-left: 0 solid #fff;
+    border-left: 0 solid #fff;
 }
 
 #map {
-  margin-bottom: 100px;
-  width: 100%;
-  height: 350px;
-  margin-left: auto;
-  margin-right: auto;
+    margin-bottom: 100px;
+    width: 100%;
+    height: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
